objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interview</label>
        <referenceTo>Interview__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Fit for role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Fit</fullName>
                </value>
                <value>
                    <fullName>OK Fit</fullName>
                </value>
                <value>
                    <fullName>Good Fit</fullName>
                </value>
                <value>
                    <fullName>Great Fit</fullName>
                </value>
                <value>
                    <fullName>Perfect Fit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_out_of_10__c</fullName>
        <label>Rating out of 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Feedback</label>
    <nameField>
        <displayFormat>Feedback-{000}</displayFormat>
        <label>Feedback No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>